update: 새 글 및 설정 수정

--- a/public/photos/autumn-leaves/index.html
+++ b/public/photos/autumn-leaves/index.html
@@ -129,7 +129,7 @@
             </li>
           
             <li class="navigation-item">
-              <a class="navigation-link " href="/photos/">Film</a>
+              <a class="navigation-link " href="/photos/">Photos</a>
             </li>
           
             <li class="navigation-item">
