--- a/public/404.html
+++ b/public/404.html
@@ -125,7 +125,7 @@
             </li>
           
             <li class="navigation-item">
-              <a class="navigation-link " href="/">Archive</a>
+              <a class="navigation-link " href="/photos/">Archive</a>
             </li>
           
             <li class="navigation-item">
