--- a/public/photos/cow-cat/index.html
+++ b/public/photos/cow-cat/index.html
@@ -129,7 +129,7 @@
             </li>
           
             <li class="navigation-item">
-              <a class="navigation-link " href="/">Archive</a>
+              <a class="navigation-link " href="/photos/">Archive</a>
             </li>
           
             <li class="navigation-item">
