update: 새 글 및 설정 수정

--- a/public/photos/cafe-morning/index.html
+++ b/public/photos/cafe-morning/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=50786&amp;path=livereload" data-no-instant defer></script>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=64254&amp;path=livereload" data-no-instant defer></script>
   <title>KIMHYEJIN</title>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
   <meta name="twitter:title" content="nagative film">
   <meta name="twitter:description" content="마두동에서 흑백 사진">
 
-<meta property="og:url" content="http://localhost:50786/photos/cafe-morning/">
+<meta property="og:url" content="http://localhost:64254/photos/cafe-morning/">
   <meta property="og:site_name" content="KIMHYEJIN">
   <meta property="og:title" content="nagative film">
   <meta property="og:description" content="마두동에서 흑백 사진">
@@ -32,7 +32,7 @@
 
 
 
-<link rel="canonical" href="http://localhost:50786/photos/cafe-morning/">
+<link rel="canonical" href="http://localhost:64254/photos/cafe-morning/">
 
 
 <link rel="preload" href="/fonts/fa-brands-400.woff2" as="font" type="font/woff2" crossorigin>
@@ -107,7 +107,7 @@
     <nav class="navigation">
   <section class="container">
     
-    <a class="navigation-title" href="http://localhost:50786/">
+    <a class="navigation-title" href="http://localhost:64254/">
       KIMHYEJIN
     </a>
     
@@ -160,7 +160,7 @@
   
 
   <div class="content">
-    <p><img src="main.jpg" alt="AGFA APX 400 | LeicaMinizoom | 2025.10 | Madu-dong"></p>
+    <p>AGFA APX 400 | LeicaMinizoom | 2025.10 | Madu-dong</p>
 
   </div>
 
