fix: remove overriding layouts that broke theme CSS

--- a/public/photos/cow-cat---복사본/index.html
+++ b/public/photos/cow-cat---복사본/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
 
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
-  <title>
-  거북이는 의외로 빨리 헤엄친다 · KIMHYEJIN
-</title>
+  <title>KIMHYEJIN</title>
   <link rel="stylesheet" href="/css/photos.css">
 </head>
 
@@ -66,26 +64,44 @@
 
     <div class="content">
       
-  <section class="container page">
-  <article>
-    <header>
-      <h1 class="title">
-        <a class="title-link" href="http://localhost:1313/archive/%EA%B1%B0%EB%B6%81%EC%9D%B4%EB%8A%94-%EC%9D%98%EC%99%B8%EB%A1%9C-%EB%B9%A8%EB%A6%AC-%ED%97%A4%EC%97%84%EC%B9%9C%EB%8B%A4/">
-          거북이는 의외로 빨리 헤엄친다
-        </a>
-      </h1>
-    </header>
-
-    <p>#거북이는 의외로 빨리 헤엄친다</p>
-<p><strong>가장 먼저 리뷰를 쓰고 싶은 영화</strong>
-<em>내 꿈이 이뤄지는 순간이었거든</em>
-<u>내가 처음 담당했던 영화야</u></p>
-<p><img src="/content/cinema/cinema01_01.jpg" alt="스틸컷"></p>
-
-  </article>
-</section>
+  
+<main class="photo-page">
 
   
+  
+
+  
+  
+
+  
+  
+
+  
+    <figure class="photo-main">
+      <img src="/photos/cow-cat---%EB%B3%B5%EC%82%AC%EB%B3%B8/main.jpg" alt="cow cat">
+    </figure>
+    
+  
+
+  <h1 class="photo-title">cow cat</h1>
+
+  
+    <div class="photo-content">
+      <p>🎞️ AGFA APX 400 </br>
+📸 LeicaMinizoom </br>
+🧷2025.10 </br>
+📍Madu-dong </br>
+</br>
+My first work, printed in the darkroom.</p>
+
+    </div>
+  
+
+  
+
+
+</main>
+
 
     </div>
 
