update: 새 글 및 설정 수정

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,7 @@
 
 <meta name="author" content="김혜진">
 <meta name="description" content="
-&ldquo;Have more than thou showest, speak less than thou knowest.&rdquo;
-— William Shakespeare
+&ldquo;어느 계절의 시작을 믿어보자&rdquo;
 ">
 <meta name="keywords" content="">
 
@@ -21,12 +20,12 @@
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Home">
-  <meta name="twitter:description" content="“Have more than thou showest, speak less than thou knowest.” — William Shakespeare">
+  <meta name="twitter:description" content="“어느 계절의 시작을 믿어보자”">
 
 <meta property="og:url" content="http://localhost:1313/">
   <meta property="og:site_name" content="🐢">
   <meta property="og:title" content="Home">
-  <meta property="og:description" content="“Have more than thou showest, speak less than thou knowest.” — William Shakespeare">
+  <meta property="og:description" content="“어느 계절의 시작을 믿어보자”">
   <meta property="og:locale" content="ko_kr">
   <meta property="og:type" content="website">
 
@@ -152,17 +151,17 @@
       <img
         src="/images/home.png"
         alt="kimhyejin"
-        style="max-width:260px;height:auto;border-radius:0;display:block;margin:0 auto 0px;"
+        style="max-width:200px;height:auto;border-radius:0;display:block;margin:0 auto 0px;"
       >
 
 <h1 style="
   font-size: 15px;     /* ← 폰트 크기 */
-  font-weight: 200;    /* ← 폰트 굵기 (100~900 중 숫자 작을수록 얇음) */
+  font-weight: 100;    /* ← 폰트 굵기 (100~900 중 숫자 작을수록 얇음) */
   color: #666;         /* ← 폰트 색상 */
   margin: 0;
 ">
 </h1>
-ある季節のはじまりを信じてみよう。
+"엄마, 내 눈은 언제 하트로 변해요"
     </div>
   </main>
 
