--- a/public/photos/cow-cat/index.html
+++ b/public/photos/cow-cat/index.html
@@ -161,8 +161,8 @@ My first work, printed in the darkroom.">
       
       <figure class="ph-figure">
         <img
-          src="/photos/cow-cat/main_hu_40d633ea2b7857bf.jpg"
-          srcset="/photos/cow-cat/main_hu_7e668bf841e85c06.jpg 400w, /photos/cow-cat/main_hu_40d633ea2b7857bf.jpg 800w, /photos/cow-cat/main_hu_9399d135ddec35b9.jpg 1200w"
+          src="/photos/cow-cat/main_hu_40d633ea2b7857bf.JPG"
+          srcset="/photos/cow-cat/main_hu_7e668bf841e85c06.JPG 400w, /photos/cow-cat/main_hu_40d633ea2b7857bf.JPG 800w, /photos/cow-cat/main_hu_9399d135ddec35b9.JPG 1200w"
           sizes="(max-width: 700px) 100vw, 800px"
           alt="Cow Cat" loading="lazy" decoding="async">
         
