--- a/public/kimgyeul/index.html
+++ b/public/kimgyeul/index.html
@@ -167,7 +167,7 @@
         <span>agga99@naver.com</span>
       </div>
       
-      <div class="kimg-note">자연 관찰과 연기를 좋아합니다.</div>
+      <div class="kimg-note">자연 관찰과 이야기를 좋아합니다.</div>
       
     </div>
   </section>
