update: 새 글 및 설정 수정

--- a/public/photos/double-double/index.html
+++ b/public/photos/double-double/index.html
@@ -182,7 +182,11 @@ like better? like more?</p>
     
     <nav class="photo-nav">
   
+    <a class="photo-nav-prev" href="/photos/shadow/">← Shadow</a>
+  
 
+  
+    <span class="photo-nav-divider">|</span>
   
 
   
