update: 새 글 및 설정 수정

--- a/public/cinema/index.html
+++ b/public/cinema/index.html
@@ -158,6 +158,15 @@
         </a>
       </li>
     
+      <li style="display:flex;gap:24px;align-items:baseline;margin:14px 0;">
+        <time style="color:#6b7280;min-width:160px;">
+          May 15, 2025
+        </time>
+        <a href="/cinema/%ED%95%B4%ED%94%BC%EC%97%94%EB%93%9C/" style="color:#111;text-decoration:none;font-weight:600;">
+          해피엔드, Happyend
+        </a>
+      </li>
+    
   </ul>
 </main>
 
