update: 새 글 및 설정 수정

--- a/public/book/골목의-조/index.html
+++ b/public/book/골목의-조/index.html
@@ -3,7 +3,7 @@
 
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <title>
-  [골목의 조] 송섬  · 엄마, 내 눈은 언제 하트로 변해요
+  송섬 장편소설 『골목의 조』  · 엄마, 내 눈은 언제 하트로 변해요
 </title>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,14 +21,14 @@
 
 
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="[골목의 조] 송섬 ">
+  <meta name="twitter:title" content="송섬 장편소설 『골목의 조』 ">
   <meta name="twitter:description" content="엄마의 부재와 아버지의 자살이라는 유년시절을 보낸 ‘나’, 사회에 잘 적응하지 못하고 연애도 늘 좋지 않은 방향으로 끝나버리는 삶을 살다가 우연히 골목 안 술집의 사장님 ‘조’를 만나게 되면서 겪게 되는 이야기.
 어느 날 아침에 갑자기 방 한구석 벽 모서리에 나타났다가 또 어느 날 갑자기 사라져버린 아저씨, 자고 일어났더니 차가운 시체가 되어있던 고양이 설리, 기차 선로에 직각으로 누워 죽음을 맞이한 조. 그리고 현관문에 목을 매달고 죽은 아빠까지.
 언젠가 사람들은 일기장에도 거짓말을 쓴다는 사실을 알아차리고는 기분이 더러워져 소리를 지르며 울었다.">
 
-<meta property="og:url" content="http://localhost:1313/book/%EA%B1%B0%EB%B6%81%EC%9D%B4%EB%8A%94-%EC%9D%98%EC%99%B8%EB%A1%9C-%EB%B9%A8%EB%A6%AC-%ED%97%A4%EC%97%84%EC%B9%9C%EB%8B%A4/">
+<meta property="og:url" content="http://localhost:1313/book/%EA%B3%A8%EB%AA%A9%EC%9D%98-%EC%A1%B0/">
   <meta property="og:site_name" content="엄마, 내 눈은 언제 하트로 변해요">
-  <meta property="og:title" content="[골목의 조] 송섬 ">
+  <meta property="og:title" content="송섬 장편소설 『골목의 조』 ">
   <meta property="og:description" content="엄마의 부재와 아버지의 자살이라는 유년시절을 보낸 ‘나’, 사회에 잘 적응하지 못하고 연애도 늘 좋지 않은 방향으로 끝나버리는 삶을 살다가 우연히 골목 안 술집의 사장님 ‘조’를 만나게 되면서 겪게 되는 이야기.
 어느 날 아침에 갑자기 방 한구석 벽 모서리에 나타났다가 또 어느 날 갑자기 사라져버린 아저씨, 자고 일어났더니 차가운 시체가 되어있던 고양이 설리, 기차 선로에 직각으로 누워 죽음을 맞이한 조. 그리고 현관문에 목을 매달고 죽은 아빠까지.
 언젠가 사람들은 일기장에도 거짓말을 쓴다는 사실을 알아차리고는 기분이 더러워져 소리를 지르며 울었다.">
@@ -41,7 +41,7 @@
 
 
 
-<link rel="canonical" href="http://localhost:1313/book/%EA%B1%B0%EB%B6%81%EC%9D%B4%EB%8A%94-%EC%9D%98%EC%99%B8%EB%A1%9C-%EB%B9%A8%EB%A6%AC-%ED%97%A4%EC%97%84%EC%B9%9C%EB%8B%A4/">
+<link rel="canonical" href="http://localhost:1313/book/%EA%B3%A8%EB%AA%A9%EC%9D%98-%EC%A1%B0/">
 
 
 <link rel="preload" href="/fonts/fa-brands-400.woff2" as="font" type="font/woff2" crossorigin>
@@ -157,8 +157,8 @@
   <article>
     <header>
       <h1 class="title">
-        <a class="title-link" href="http://localhost:1313/book/%EA%B1%B0%EB%B6%81%EC%9D%B4%EB%8A%94-%EC%9D%98%EC%99%B8%EB%A1%9C-%EB%B9%A8%EB%A6%AC-%ED%97%A4%EC%97%84%EC%B9%9C%EB%8B%A4/">
-          [골목의 조] 송섬 
+        <a class="title-link" href="http://localhost:1313/book/%EA%B3%A8%EB%AA%A9%EC%9D%98-%EC%A1%B0/">
+          송섬 장편소설 『골목의 조』 
         </a>
       </h1>
     </header>
