update: 새 글 및 설정 수정

--- a/public/siwa/busan/index.html
+++ b/public/siwa/busan/index.html
@@ -3,7 +3,7 @@
 
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <title>
-  Busan · 엄마, 내 눈은 언제 하트로 변해요
+  Busan · 기록
 </title>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +23,7 @@
   <meta name="twitter:description" content="부산 여행 기록 한두 줄…">
 
 <meta property="og:url" content="http://localhost:1313/siwa/busan/">
-  <meta property="og:site_name" content="엄마, 내 눈은 언제 하트로 변해요">
+  <meta property="og:site_name" content="기록">
   <meta property="og:title" content="Busan">
   <meta property="og:description" content="부산 여행 기록 한두 줄…">
   <meta property="og:locale" content="ko_kr">
