--- a/public/cinema/세계의주인/index.html
+++ b/public/cinema/세계의주인/index.html
@@ -3,7 +3,7 @@
 
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <title>
-  세계의 주인, The World of Love · 엄마, 내 눈은 언제 하트로 변해요
+  세계의 주인, The World of Love · 기록
 </title>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,7 +27,7 @@
   <meta name="twitter:description" content="2025 | 드라마 | 감독 윤가은 | 출연 서수빈, 장혜진 ★★★★ 주인이의 주변을 통해서 주인이를 들여다보게 되는 영화. 제대로 알아야 하고, 정확하게 표현해야 하고, 그리고 잘 돌봐야 한다는 이야기로 읽었다. 짠-하고 사라지는 건 없고 결국 어디선가 들통나기 마련이지만 결국에는 긴 격려와 응원으로 마무리되는 남동생 해인의 마술쇼는 이 영화를 감상하는 데 큰 힌트를 주는 거 같기도 했다. 주인이가 마주하는 다양한 얼굴들을 보면서 그게 혹 나의 표정은 아닐까 되돌아보게 되고, 강한 분노 앞에서 무기력해지는 나를 발견하기도 했다.">
 
 <meta property="og:url" content="http://localhost:1313/cinema/%EC%84%B8%EA%B3%84%EC%9D%98%EC%A3%BC%EC%9D%B8/">
-  <meta property="og:site_name" content="엄마, 내 눈은 언제 하트로 변해요">
+  <meta property="og:site_name" content="기록">
   <meta property="og:title" content="세계의 주인, The World of Love">
   <meta property="og:description" content="2025 | 드라마 | 감독 윤가은 | 출연 서수빈, 장혜진 ★★★★ 주인이의 주변을 통해서 주인이를 들여다보게 되는 영화. 제대로 알아야 하고, 정확하게 표현해야 하고, 그리고 잘 돌봐야 한다는 이야기로 읽었다. 짠-하고 사라지는 건 없고 결국 어디선가 들통나기 마련이지만 결국에는 긴 격려와 응원으로 마무리되는 남동생 해인의 마술쇼는 이 영화를 감상하는 데 큰 힌트를 주는 거 같기도 했다. 주인이가 마주하는 다양한 얼굴들을 보면서 그게 혹 나의 표정은 아닐까 되돌아보게 되고, 강한 분노 앞에서 무기력해지는 나를 발견하기도 했다.">
   <meta property="og:locale" content="ko_kr">
@@ -166,7 +166,7 @@
 <br>
 <br>
 주인이의 주변을 통해서 주인이를 들여다보게 되는 영화. <strong>제대로 알아야 하고, 정확하게 표현해야 하고, 그리고 잘 돌봐야 한다는 이야기로 읽었다.</strong> 짠-하고 사라지는 건 없고 결국 어디선가 들통나기 마련이지만 결국에는 긴 격려와 응원으로 마무리되는 남동생 해인의 마술쇼는 이 영화를 감상하는 데 큰 힌트를 주는 거 같기도 했다. 주인이가 마주하는 다양한 얼굴들을 보면서 그게 혹 나의 표정은 아닐까 되돌아보게 되고, 강한 분노 앞에서 무기력해지는 나를 발견하기도 했다.</p>
-<p>믿도 끝도 없이 밝은 친구가 있었다. 쟤는 뭐가 그렇게 좋을까, 심통 어린 마음으로 대한 적도 많았다. 그러다 우연히 멀리서 걸어가는 그 친구의 표정 없는 얼굴을 보는 순간 슬퍼졌던 적이 있다. 미안했다. 그 친구가 생각난다. 잘 지내고 있을까.</p>
+<p>밑도 끝도 없이 밝은 친구가 있었다. 쟤는 뭐가 그렇게 좋을까, 심통 어린 마음으로 대한 적도 많았다. 그러다 우연히 멀리서 걸어가는 그 친구의 표정 없는 얼굴을 보는 순간 슬퍼졌던 기억이 있다. 미안했다. 그 친구가 생각난다. 잘 지내고 있을까.</p>
 <p><img src="%EC%84%B8%EA%B3%84%EC%9D%98%EC%A3%BC%EC%9D%B8.gif" alt="스틸컷"></p>
 <p>&ldquo;하나의 세계가 어떻게 작동하는 지를 보려면 같이 움직이는 것을 봐야 되니까요. 때로는 정말 멀리서 찍어보고 싶었기도 하고, 영화가 그것을 요구한다고 생각했던 거 같아요. ··· 옆에서 같이 숨 쉬는 것처럼 있다가 좀 멀어졌을 때 그것이 또 어떻게 다가오는지에 대한 효과를 주고 싶었어요&rdquo; -윤가은 감독 인터뷰 중에서</p>
 
