--- a/public/photos/greenbluelight/index.html
+++ b/public/photos/greenbluelight/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
-  <title>엄마, 내 눈은 언제 하트로 변해요</title>
+  <title>기록</title>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="color-scheme" content="light dark">
@@ -21,7 +21,7 @@
   <meta name="twitter:description" content="마두동에서 흑백 사진">
 
 <meta property="og:url" content="http://localhost:1313/photos/greenbluelight/">
-  <meta property="og:site_name" content="엄마, 내 눈은 언제 하트로 변해요">
+  <meta property="og:site_name" content="기록">
   <meta property="og:title" content="green, blue, light.">
   <meta property="og:description" content="마두동에서 흑백 사진">
   <meta property="og:locale" content="ko_kr">
