--- a/public/siwa/index.html
+++ b/public/siwa/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
-  <title>엄마, 내 눈은 언제 하트로 변해요</title>
+  <title>기록</title>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="color-scheme" content="light dark">
@@ -21,7 +21,7 @@
   <meta name="twitter:description" content="hyennn.log">
 
 <meta property="og:url" content="http://localhost:1313/siwa/">
-  <meta property="og:site_name" content="엄마, 내 눈은 언제 하트로 변해요">
+  <meta property="og:site_name" content="기록">
   <meta property="og:title" content="Siwas">
   <meta property="og:description" content="hyennn.log">
   <meta property="og:locale" content="ko_kr">
@@ -75,7 +75,7 @@
 <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
 
 
-<link rel="alternate" type="application/rss+xml" href="/siwa/index.xml" title="엄마, 내 눈은 언제 하트로 변해요" />
+<link rel="alternate" type="application/rss+xml" href="/siwa/index.xml" title="기록" />
 
 
 
@@ -144,9 +144,6 @@
     <div class="content">
       
 <main class="container" style="max-width:800px;margin:0 auto;padding:24px;">
-  <h1 style="font-size:22px;font-weight:400;margin-bottom:20px;">
-    Siwas
-  </h1>
 
   
 
