--- a/public/sketch/거북이는-의외로-빨리-헤엄진다/index.html
+++ b/public/sketch/거북이는-의외로-빨리-헤엄진다/index.html
@@ -16,8 +16,7 @@
 <meta name="description" content="#거북이는 의외로 빨리 헤엄친다
 가장 먼저 리뷰를 쓰고 싶은 영화
 내 꿈이 이뤄지는 순간이었거든
-내가 처음 담당했던 영화야
-">
+내가 처음 담당했던 영화야">
 <meta name="keywords" content="">
 
 
@@ -27,7 +26,7 @@
   <meta name="twitter:description" content="#거북이는 의외로 빨리 헤엄친다
 가장 먼저 리뷰를 쓰고 싶은 영화 내 꿈이 이뤄지는 순간이었거든 내가 처음 담당했던 영화야">
 
-<meta property="og:url" content="http://localhost:1313/sketch/%EA%B1%B0%EB%B6%81%EC%9D%B4%EB%8A%94-%EC%9D%98%EC%99%B8%EB%A1%9C-%EB%B9%A8%EB%A6%AC-%ED%97%A4%EC%97%84%EC%B9%9C%EB%8B%A4/">
+<meta property="og:url" content="http://localhost:1313/sketch/%EA%B1%B0%EB%B6%81%EC%9D%B4%EB%8A%94-%EC%9D%98%EC%99%B8%EB%A1%9C-%EB%B9%A8%EB%A6%AC-%ED%97%A4%EC%97%84%EC%A7%84%EB%8B%A4/">
   <meta property="og:site_name" content="기록">
   <meta property="og:title" content="거북이는 의외로 빨리 헤엄친다">
   <meta property="og:description" content="#거북이는 의외로 빨리 헤엄친다
@@ -41,7 +40,7 @@
 
 
 
-<link rel="canonical" href="http://localhost:1313/sketch/%EA%B1%B0%EB%B6%81%EC%9D%B4%EB%8A%94-%EC%9D%98%EC%99%B8%EB%A1%9C-%EB%B9%A8%EB%A6%AC-%ED%97%A4%EC%97%84%EC%B9%9C%EB%8B%A4/">
+<link rel="canonical" href="http://localhost:1313/sketch/%EA%B1%B0%EB%B6%81%EC%9D%B4%EB%8A%94-%EC%9D%98%EC%99%B8%EB%A1%9C-%EB%B9%A8%EB%A6%AC-%ED%97%A4%EC%97%84%EC%A7%84%EB%8B%A4/">
 
 
 <link rel="preload" href="/fonts/fa-brands-400.woff2" as="font" type="font/woff2" crossorigin>
@@ -157,7 +156,7 @@
   <article>
     <header>
       <h1 class="title">
-        <a class="title-link" href="http://localhost:1313/sketch/%EA%B1%B0%EB%B6%81%EC%9D%B4%EB%8A%94-%EC%9D%98%EC%99%B8%EB%A1%9C-%EB%B9%A8%EB%A6%AC-%ED%97%A4%EC%97%84%EC%B9%9C%EB%8B%A4/">
+        <a class="title-link" href="http://localhost:1313/sketch/%EA%B1%B0%EB%B6%81%EC%9D%B4%EB%8A%94-%EC%9D%98%EC%99%B8%EB%A1%9C-%EB%B9%A8%EB%A6%AC-%ED%97%A4%EC%97%84%EC%A7%84%EB%8B%A4/">
           거북이는 의외로 빨리 헤엄친다
         </a>
       </h1>
@@ -167,7 +166,6 @@
 <p><strong>가장 먼저 리뷰를 쓰고 싶은 영화</strong>
 <em>내 꿈이 이뤄지는 순간이었거든</em>
 <u>내가 처음 담당했던 영화야</u></p>
-<p><img src="/content/cinema/cinema01_01.jpg" alt="스틸컷"></p>
 
   </article>
 </section>
