update: 새 글 및 설정 수정

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=62082&amp;path=livereload" data-no-instant defer></script>
   <title>HYENNN</title>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,7 @@
   <meta name="twitter:title" content="About">
   <meta name="twitter:description" content="여기 내용은 일단 템플릿에서 직접 쓸 거라 간단히만 적어둘게요. 이 텍스트는 나중에 안 보여도 괜찮아요.">
 
-<meta property="og:url" content="http://localhost:1313/about/">
+<meta property="og:url" content="http://localhost:62082/about/">
   <meta property="og:site_name" content="HYENNN">
   <meta property="og:title" content="About">
   <meta property="og:description" content="여기 내용은 일단 템플릿에서 직접 쓸 거라 간단히만 적어둘게요. 이 텍스트는 나중에 안 보여도 괜찮아요.">
@@ -30,7 +30,7 @@
 
 
 
-<link rel="canonical" href="http://localhost:1313/about/">
+<link rel="canonical" href="http://localhost:62082/about/">
 
 
 <link rel="preload" href="/fonts/fa-brands-400.woff2" as="font" type="font/woff2" crossorigin>
@@ -100,7 +100,7 @@
     <nav class="navigation">
   <section class="container">
     
-<a class="navigation-title" href="http://localhost:1313/">
+<a class="navigation-title" href="http://localhost:62082/">
   <img src="/images/siwa.jpg" alt="home" class="home-logo">
 </a>
     
@@ -163,7 +163,7 @@
 
   <section class="intro" style="margin-bottom:24px;">
     <p class="ko" style="margin:0 0 12px 0;font-size:15px;color:#333;line-height:1.7;">
-       수많은 인덱스, 밑줄 그리고 낙서인지 그림인지 알 수 없는 흔적들, 스스로에게 묻는 질문들까지. <br>노트에 적힌 메모들을 한곳에 모으고 있습니다. 
+       수많은 인덱스, 밑줄, 그리고 낙서인지 그림인지 알 수 없는 흔적들, 스스로에게 묻는 질문들까지. <br>노트에 적힌 메모들을 한곳에 모으고 있습니다. 
 </p>
      </section>
 
