--- a/public/photos/shadow/index.html
+++ b/public/photos/shadow/index.html
@@ -181,7 +181,11 @@
     
     <nav class="photo-nav">
   
+    <a class="photo-nav-prev" href="/photos/%EB%A7%A4%EC%8B%A4%EC%B0%A8/">← 매실차</a>
+  
 
+  
+    <span class="photo-nav-divider">|</span>
   
 
   
