update: 새 글 및 설정 수정

--- a/public/photos/double-double/index.html
+++ b/public/photos/double-double/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=55068&amp;path=livereload" data-no-instant defer></script>
   <title>HYENNN</title>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +24,7 @@ like better? like more?">
   <meta name="twitter:title" content="double, double!">
   <meta name="twitter:description" content="🎞️ FUJI C200 📸 Olympus LT-1 🧷2025.07 📍Home like better? like more?">
 
-<meta property="og:url" content="http://localhost:1313/photos/double-double/">
+<meta property="og:url" content="http://localhost:55068/photos/double-double/">
   <meta property="og:site_name" content="HYENNN">
   <meta property="og:title" content="double, double!">
   <meta property="og:description" content="🎞️ FUJI C200 📸 Olympus LT-1 🧷2025.07 📍Home like better? like more?">
@@ -37,7 +37,7 @@ like better? like more?">
 
 
 
-<link rel="canonical" href="http://localhost:1313/photos/double-double/">
+<link rel="canonical" href="http://localhost:55068/photos/double-double/">
 
 
 <link rel="preload" href="/fonts/fa-brands-400.woff2" as="font" type="font/woff2" crossorigin>
@@ -107,7 +107,7 @@ like better? like more?">
     <nav class="navigation">
   <section class="container">
     
-<a class="navigation-title" href="http://localhost:1313/">
+<a class="navigation-title" href="http://localhost:55068/">
   <img src="/images/siwa.jpg" alt="home" class="home-logo">
 </a>
     
@@ -203,19 +203,9 @@ like better? like more?</p>
 
     </div>
 
-    <footer class="footer">
-  <section class="container" style="text-align:center;font-size:12px;color:#777;padding:16px 0;">
-    <p style="margin:4px 0;">
-      © 2025 KIMHYEJIN · HYENNNLOG.KR
-    </p>
-    <p style="margin:4px 0;">
-      built with <a href="https://gohugo.io/" target="_blank" style="color:#777;text-decoration:none;">Hugo</a>
-      &amp;
-      <a href="https://github.com/luizdepra/hugo-coder" target="_blank" style="color:#777;text-decoration:none;">Coder</a>
-    </p>
-  </section>
+    <footer style="text-align:center; padding:20px; font-size:13px; color:#aaa;">
+  © 2025 KIMHYEJIN · けいしん
 </footer>
-
   </main>
 
   
