--- a/public/photos/family/index.html
+++ b/public/photos/family/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=55068&amp;path=livereload" data-no-instant defer></script>
   <title>HYENNN</title>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +23,7 @@
   <meta name="twitter:title" content="family">
   <meta name="twitter:description" content="🎞️ Kodak ULTRAMAX 400 📸 Minolta Himatic AF-D 🧷2025.10 ありがとう">
 
-<meta property="og:url" content="http://localhost:1313/photos/family/">
+<meta property="og:url" content="http://localhost:55068/photos/family/">
   <meta property="og:site_name" content="HYENNN">
   <meta property="og:title" content="family">
   <meta property="og:description" content="🎞️ Kodak ULTRAMAX 400 📸 Minolta Himatic AF-D 🧷2025.10 ありがとう">
@@ -36,7 +36,7 @@
 
 
 
-<link rel="canonical" href="http://localhost:1313/photos/family/">
+<link rel="canonical" href="http://localhost:55068/photos/family/">
 
 
 <link rel="preload" href="/fonts/fa-brands-400.woff2" as="font" type="font/woff2" crossorigin>
@@ -106,7 +106,7 @@
     <nav class="navigation">
   <section class="container">
     
-<a class="navigation-title" href="http://localhost:1313/">
+<a class="navigation-title" href="http://localhost:55068/">
   <img src="/images/siwa.jpg" alt="home" class="home-logo">
 </a>
     
@@ -201,19 +201,9 @@
 
     </div>
 
-    <footer class="footer">
-  <section class="container" style="text-align:center;font-size:12px;color:#777;padding:16px 0;">
-    <p style="margin:4px 0;">
-      © 2025 KIMHYEJIN · HYENNNLOG.KR
-    </p>
-    <p style="margin:4px 0;">
-      built with <a href="https://gohugo.io/" target="_blank" style="color:#777;text-decoration:none;">Hugo</a>
-      &amp;
-      <a href="https://github.com/luizdepra/hugo-coder" target="_blank" style="color:#777;text-decoration:none;">Coder</a>
-    </p>
-  </section>
+    <footer style="text-align:center; padding:20px; font-size:13px; color:#aaa;">
+  © 2025 KIMHYEJIN · けいしん
 </footer>
-
   </main>
 
   
