--- a/public/sketch/02/index.html
+++ b/public/sketch/02/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=55068&amp;path=livereload" data-no-instant defer></script>
   <title>
   02 · HYENNN
 </title>
@@ -21,7 +21,7 @@
   <meta name="twitter:title" content="02">
   <meta name="twitter:description" content="스케치 테스트 02">
 
-<meta property="og:url" content="http://localhost:1313/sketch/02/">
+<meta property="og:url" content="http://localhost:55068/sketch/02/">
   <meta property="og:site_name" content="HYENNN">
   <meta property="og:title" content="02">
   <meta property="og:description" content="스케치 테스트 02">
@@ -34,7 +34,7 @@
 
 
 
-<link rel="canonical" href="http://localhost:1313/sketch/02/">
+<link rel="canonical" href="http://localhost:55068/sketch/02/">
 
 
 <link rel="preload" href="/fonts/fa-brands-400.woff2" as="font" type="font/woff2" crossorigin>
@@ -104,7 +104,7 @@
     <nav class="navigation">
   <section class="container">
     
-<a class="navigation-title" href="http://localhost:1313/">
+<a class="navigation-title" href="http://localhost:55068/">
   <img src="/images/siwa.jpg" alt="home" class="home-logo">
 </a>
     
@@ -154,7 +154,7 @@
   <article>
     <header>
       <h1 class="title">
-        <a class="title-link" href="http://localhost:1313/sketch/02/">
+        <a class="title-link" href="http://localhost:55068/sketch/02/">
           02
         </a>
       </h1>
@@ -169,19 +169,9 @@
 
     </div>
 
-    <footer class="footer">
-  <section class="container" style="text-align:center;font-size:12px;color:#777;padding:16px 0;">
-    <p style="margin:4px 0;">
-      © 2025 KIMHYEJIN · HYENNNLOG.KR
-    </p>
-    <p style="margin:4px 0;">
-      built with <a href="https://gohugo.io/" target="_blank" style="color:#777;text-decoration:none;">Hugo</a>
-      &amp;
-      <a href="https://github.com/luizdepra/hugo-coder" target="_blank" style="color:#777;text-decoration:none;">Coder</a>
-    </p>
-  </section>
+    <footer style="text-align:center; padding:20px; font-size:13px; color:#aaa;">
+  © 2025 KIMHYEJIN · けいしん
 </footer>
-
   </main>
 
   
