--- a/public/sketch/index.html
+++ b/public/sketch/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=55068&amp;path=livereload" data-no-instant defer></script>
   <title>HYENNN</title>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
   <meta name="twitter:title" content="Sketch">
   <meta name="twitter:description" content="연필과 크레용, 낙서와 그림들의 조각들입니다.">
 
-<meta property="og:url" content="http://localhost:1313/sketch/">
+<meta property="og:url" content="http://localhost:55068/sketch/">
   <meta property="og:site_name" content="HYENNN">
   <meta property="og:title" content="Sketch">
   <meta property="og:description" content="연필과 크레용, 낙서와 그림들의 조각들입니다.">
@@ -29,7 +29,7 @@
 
 
 
-<link rel="canonical" href="http://localhost:1313/sketch/">
+<link rel="canonical" href="http://localhost:55068/sketch/">
 
 
 <link rel="preload" href="/fonts/fa-brands-400.woff2" as="font" type="font/woff2" crossorigin>
@@ -100,7 +100,7 @@
     <nav class="navigation">
   <section class="container">
     
-<a class="navigation-title" href="http://localhost:1313/">
+<a class="navigation-title" href="http://localhost:55068/">
   <img src="/images/siwa.jpg" alt="home" class="home-logo">
 </a>
     
@@ -287,19 +287,9 @@ lightGallery(galleryEl, {
 
     </div>
 
-    <footer class="footer">
-  <section class="container" style="text-align:center;font-size:12px;color:#777;padding:16px 0;">
-    <p style="margin:4px 0;">
-      © 2025 KIMHYEJIN · HYENNNLOG.KR
-    </p>
-    <p style="margin:4px 0;">
-      built with <a href="https://gohugo.io/" target="_blank" style="color:#777;text-decoration:none;">Hugo</a>
-      &amp;
-      <a href="https://github.com/luizdepra/hugo-coder" target="_blank" style="color:#777;text-decoration:none;">Coder</a>
-    </p>
-  </section>
+    <footer style="text-align:center; padding:20px; font-size:13px; color:#aaa;">
+  © 2025 KIMHYEJIN · けいしん
 </footer>
-
   </main>
 
   
